Removed models and datasets not in use, committing all models and datasets otherwise

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ textracting/*.json
 textracting/*.csv
 textracting/*.txt
 **/.ipynb_checkpoints/
+textracting/*.ipynb
+textracting/datasets/not_using
+investigations/
+textracting/production/
+textracting/reports/
+textracting/training/
